rnsc/tests/snapshots/error-lexer-directives-dot_static.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class
.static
.method
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/rns_integration/error/lexer/directives/dot_static.rns:2:1 ]
   │
 2 │ .static
   │ ───┬───  
   │    ╰───── '.static' is not a recognized directive
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- JAVAP -----
not generated
