rnsc/tests/snapshots/error-lexer-directives-dot_static_wasm.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class
.static
.method
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_static.rns:2:1 ]
   │
 2 │ .static
   │ ───┬───  
   │    ╰───── '.static' is not a recognized directive
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-002
───╯
----- HASH -----
not generated
