rnsc/tests/snapshots/error-lexer-directives-dot_synthetic_wasm.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.synthetic
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_synthetic.rns:1:1 ]
   │
 1 │ .synthetic
   │ ─────┬────  
   │      ╰────── '.synthetic' is not a recognized directive
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/e-002
───╯
----- HASH -----
not generated
