rnsc/tests/snapshots/error-lexer-directives-dot_synthetic_werror.snap
---
source: rns/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.synthetic
----- STDERR -----
[E001] Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/dot_synthetic.rns:1:1 ]
   │
 1 │ .synthetic
   │ ─────┬────  
   │      ╰────── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
