rnsc/tests/snapshots/error-lexer-directives-unknown_directive_as_first_token_wasm.snap
---
source: rns-asm/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
    .unknown_directive HelloWorld
.end
----- STDERR -----
Error: unknown directive
   ╭─[ test_data/integration/error/lexer/directives/unknown_directive_as_first_token.rns:1:5 ]
   │
 1 │     .unknown_directive HelloWorld
   │     ─────────┬────────  
   │              ╰────────── unknown directive
   │ 
   │ Note: Valid directives are .class, .super, .method, .end, .code, .annotation
───╯
----- HASH -----
not generated
