rnsc/tests/snapshots/error-lexer-directives-unknown_directive_as_second_token.snap
---
source: rnsc/tests/rns_test.rs
expression: "&snapshot_content"
---
----- DISASSEMBLED -----
not generated
----- INPUT -----
.class .unknown_directive HelloWorld
.class_end
----- STDERR -----
[E-002] Error: unknown directive
   ╭─[ test_data/rns_integration/error/lexer/directives/unknown_directive_as_second_token.rns:1:8 ]
   │
 1 │ .class .unknown_directive HelloWorld
   │        ─────────┬────────  
   │                 ╰────────── '.unknown_directive' is not a recognized directive
   │ 
   │ Note: For more details see:
   │       https://rune.lagertha-vm.com/errors/E-002
───╯
----- HASH -----
not generated
